--- a/Rotten_Potatoes/client/package.json
+++ b/Rotten_Potatoes/client/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
