--- a/Rotten_Potatoes/client/package.json
+++ b/Rotten_Potatoes/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
+    "react-uuid": "^2.0.0",
     "swiper": "^8.4.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
