--- a/Rotten_Potatoes/client/package.json
+++ b/Rotten_Potatoes/client/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@tailwindui/react": "^0.1.1",
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
