--- a/Rotten_Potatoes/client/package.json
+++ b/Rotten_Potatoes/client/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.7",
     "@tailwindui/react": "^0.1.1",
     "axios": "^1.2.0",
+    "random-words": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
