--- a/Rotten_Potatoes/client/package.json
+++ b/Rotten_Potatoes/client/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.7",
     "@tailwindui/react": "^0.1.1",
     "axios": "^1.2.0",
+    "dotenv": "^16.0.3",
     "random-words": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
+    "react-scripts": "^5.0.1",
     "react-uuid": "^2.0.0",
     "swiper": "^8.4.5",
     "tailwind-scrollbar-hide": "^1.1.7"
@@ -27,6 +29,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   }
