--- a/Rotten_Potatoes/server/package.json
+++ b/Rotten_Potatoes/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "development": "nodemon",
+    "build": "webpack --config webpack.config.client.production.js"
   },
   "keywords": [],
   "author": "",
