--- a/Rotten_Potatoes/server/package.json
+++ b/Rotten_Potatoes/server/package.json
@@ -16,9 +16,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.5",
     "mongoose-unique-validator": "^3.1.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "webpack": "^5.75.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.0.1"
   }
 }
