--- a/Rotten_Potatoes/server/package.json
+++ b/Rotten_Potatoes/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "development": "nodemon",
+    "dev": "nodemon server.js",
     "build": "webpack --config webpack.config.client.production.js"
   },
   "keywords": [],
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.7.5",
+    "mongoose": "^6.8.3",
     "mongoose-unique-validator": "^3.1.0",
+    "nodemon": "^2.0.20",
     "validator": "^13.7.0",
     "webpack": "^5.75.0"
   },
