removed build script again

--- a/Rotten_Potatoes/server/package.json
+++ b/Rotten_Potatoes/server/package.json
@@ -5,9 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "build": "webpack --config webpack.config.client.production.js"
-  },
+    "dev": "nodemon server.js"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
